<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="1">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- probati sad računati širinu i visinu -->

        <Button
            android:id="@+id/button67"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginTop="114dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_z"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button73"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_k"
            app:layout_constraintStart_toEndOf="@+id/button72"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button70"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_n"
            app:layout_constraintStart_toEndOf="@+id/button69"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button71"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_m"
            app:layout_constraintStart_toEndOf="@+id/button70"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button72"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_j"
            app:layout_constraintStart_toEndOf="@+id/button71"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button68"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_s"
            app:layout_constraintStart_toEndOf="@+id/button67"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button69"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="114dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_d"
            app:layout_constraintStart_toEndOf="@+id/button68"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button63"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_f"
            app:layout_constraintStart_toEndOf="@+id/button62"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button50"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_l"
            app:layout_constraintStart_toEndOf="@+id/button38"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button46"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_g"
            app:layout_constraintStart_toEndOf="@+id/button35"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_a"
            app:layout_constraintStart_toEndOf="@+id/button31"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button42"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="25dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_w"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button61"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="25dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:foreground="@android:drawable/ic_input_delete"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button74"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="25dp"
            android:layout_marginTop="152dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button79"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="152dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:foreground="@drawable/enter"
            app:layout_constraintStart_toEndOf="@+id/button78"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button76"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="152dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_v"
            app:layout_constraintStart_toEndOf="@+id/button75"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button77"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="152dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_b"
            app:layout_constraintStart_toEndOf="@+id/button76"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button78"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="152dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:foreground="@drawable/test"
            android:foregroundGravity="center"
            app:layout_constraintStart_toEndOf="@+id/button77"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button75"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="152dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:focusableInTouchMode="true"
            android:text="@string/button_c"
            app:layout_constraintStart_toEndOf="@+id/button74"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button38"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_u"
            app:layout_constraintStart_toEndOf="@+id/button46"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button39"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_i"
            app:layout_constraintStart_toEndOf="@+id/button37"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button40"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_o"
            app:layout_constraintStart_toEndOf="@+id/button39"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button41"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_p"
            app:layout_constraintStart_toEndOf="@+id/button50"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button31"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_q"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button34"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_e"
            app:layout_constraintStart_toEndOf="@+id/button42"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button62"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_space"
            app:layout_constraintStart_toEndOf="@+id/button61"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button64"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_h"
            app:layout_constraintStart_toEndOf="@+id/button63"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button65"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            app:layout_constraintStart_toEndOf="@+id/button64"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button66"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="76dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            app:layout_constraintStart_toEndOf="@+id/button65"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button35"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_r"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button36"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_t"
            app:layout_constraintStart_toEndOf="@+id/button34"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button37"
            android:layout_width="@dimen/key_width"
            android:layout_height="@dimen/key_height"
            android:layout_marginStart="2dp"
            android:background="@drawable/ic_hexagon"
            android:contextClickable="true"
            android:text="@string/button_y"
            app:layout_constraintStart_toEndOf="@+id/button36"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>